--- a/Latex/references.bib
+++ b/Latex/references.bib
@@ -202,3 +202,48 @@ doi = {10.48550/arXiv.1712.00303}
    author={van Gelder, M. L. and Francis, L. and van Dishoeck, E. F. and Tychoniec, Ł. and Ray, T. P. and Beuther, H. and Caratti o Garatti, A. and Chen, Y. and Devaraj, R. and Gieser, C. and Justtanont, K. and Kavanagh, P. J. and Nazari, P. and Reyes, S. and Rocha, W. R. M. and Slavicinska, K. and Güdel, M. and Henning, Th. and Lagage, P.-O. and Wright, G.},
    year={2024},
    month=dec, pages={A197} }
+
+@misc{gardner2025exoalmaxialmaobservations,
+      title={exoALMA XI: ALMA Observations and Hydrodynamic Models of LkCa 15: Implications for Planetary Mass Companions in the Dust Continuum Cavity}, 
+      author={Charles H. Gardner and Andrea Isella and Hui Li and Shengtai Li and Jaehan Bae and Marcelo Barraza-Alfaro and Myriam Benisty and Gianni Cataldi and Pietro Curone and Josh A. Eisner and Stefano Facchini and Daniele Fasano and Mario Flock and Katherine B. Follette and Misato Fukagawa and Maria Galloway-Sprietsma and Himanshi Garg and Cassandra Hall and Jane Huang and John D. Ilee and Michael J. Ireland and Andrés F. Izquierdo and Christopher M. Johns-Krull and Kazuhiro Kanagawa and Adam L. Kraus and Geoffroy Lesur and Shangfei Liu and Cristiano Longarini and Ryan A. Loomis and Francois Menard and Ryuta Orihara and Christophe Pinte and Daniel Price and Luca Ricci and Giovanni Rosotti and Steph Sallum and Jochen Stadler and Richard Teague and Gaylor Wafflard-Fernandez and David J. Wilner and Andrew J. Winter and Lisa Wölfer and Hsi-Wei Yen and Tomohiro C. Yoshida and Brianna Zawadzki and Zhaohuan Zhu},
+      year={2025},
+      eprint={2504.19868},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.EP},
+      url={https://arxiv.org/abs/2504.19868}, 
+}
+
+@misc{shoshi2025alma2dsuperresolutionimaging,
+      title={ALMA 2D Super-resolution Imaging Survey of Ophiuchus Class I/Flat Spectrum/II Disks -- I: Discovery of New Disk Substructures}, 
+      author={Ayumu Shoshi and Masayuki Yamaguchi and Takayuki Muto and Naomi Hirano and Ryohei Kawabe and Takashi Tsukagoshi and Masahiro N. Machida},
+      year={2025},
+      eprint={2503.21060},
+      archivePrefix={arXiv},
+      primaryClass={astro-ph.EP},
+      url={https://arxiv.org/abs/2503.21060}, 
+}
+
+@article{Arabhavi_2025,
+   title={MINDS: The Very Low-mass Star and Brown Dwarf Sample Hidden Water in Carbon-dominated Protoplanetary Disks},
+   volume={984},
+   ISSN={2041-8213},
+   url={http://dx.doi.org/10.3847/2041-8213/adc692},
+   DOI={10.3847/2041-8213/adc692},
+   number={2},
+   journal={The Astrophysical Journal Letters},
+   publisher={American Astronomical Society},
+   author={Arabhavi, Aditya M. and Kamp, Inga and van Dishoeck, Ewine F. and Henning, Thomas and Jang, Hyerin and Christiaens, Valentin and Gasman, Danny and Pascucci, Ilaria and Perotti, Giulia and Grant, Sierra L. and Barrado, David and Güdel, Manuel and Lagage, Pierre-Olivier and Caratti o Garatti, Alessio and Lahuis, Fred and Waters, L. B. F. M. and Kaeufer, Till and Kanwar, Jayatee and Morales-Calderón, Maria and Schwarz, Kamber and Sellek, Andrew D. and Tabone, Benoît and Temmink, Milou and Vlasblom, Marissa},
+   year={2025},
+   month=may, pages={L62} }
+
+@article{Vlasblom_2025,
+   title={MINDS. JWST-MIRI reveals a peculiar CO2-rich chemistry in the drift-dominated disk CX Tau},
+   volume={693},
+   ISSN={1432-0746},
+   url={http://dx.doi.org/10.1051/0004-6361/202450863},
+   DOI={10.1051/0004-6361/202450863},
+   journal={Astronomy &amp; Astrophysics},
+   publisher={EDP Sciences},
+   author={Vlasblom, Marissa and Temmink, Milou and Grant, Sierra L. and Kurtovic, Nicolas and Sellek, Andrew D. and van Dishoeck, Ewine F. and Güdel, Manuel and Henning, Thomas and Lagage, Pierre-Olivier and Barrado, David and Caratti o Garatti, Alessio and Glauser, Adrian M. and Kamp, Inga and Lahuis, Fred and Olofsson, Göran and Arabhavi, Aditya M. and Christiaens, Valentin and Gasman, Danny and Jang, Hyerin and Morales-Calderón, Maria and Perotti, Giulia and Schwarz, Kamber and Tabone, Benoît},
+   year={2025},
+   month=jan, pages={A278} }
